<resources>
    <string name="app_name">Seesame</string>
    <string name="title_home">Seesame</string>
    <string name="title_placeorder">Post Free Ads</string>
    <string name="title_myorders">My Orders</string>
    <string name="title_Profile">Account</string>
    <!-- <string name="page_text_1">CODE</string>-->
    <string name="page_text_1">Share and Save</string>
    <string name="page_text_2">Why not share the delivery fee , small savings do make a difference</string>
    <string name="page_text_3"> Form a group</string>
    <string name="become_member_text">Terms</string>
    <string name="on_boarding_login_button_text">Member\'s Login</string>
    <string name="above_login_button_text">Already a club member?</string>
    <string name="free_account">By signing up, you agree to our </string>
    <string name="terms_conditions"><![CDATA[I accept the Terms & Conditions]]></string>
    <string name="and">and</string>
    <string name="policy"> Privacy Policy</string>
    <string name="google">continue with google</string>
    <string name="facebk">continue with facebook</string>
    <string name="twitter">continue with twitter</string>
    <string name="name">Name</string>
    <string name="hintemail">Email ID</string>
    <string name="mobileNo">Mobile No</string>
    <string name="rst">Reset</string>
    <string name="username">User Name</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="areaName">Kuvempu Nagara</string>
    <string name="address">#741, $th Main, Adhichunachangiri Road Mysore</string>
    <string name="logoutmsg">Are you sure want to logout from account ?</string>
    <string name="api_key">AIzaSyAW0FlOWDg1vtzZaYSLSvVKJaYCRHdp1rs</string>
    <string name="craving">Looking for specific Ad ?</string>

    <string name="act">Accept</string>
    <string name="dumy_title">Hotel Name</string>
    <string name="orderplc">Place Oder</string>
    <string name="resturnt">Choose resturnt</string>
    <string name="landmark">LamndMark</string>
    <string name="flatno">FlatNo</string>
    <string name="plcordr">Place Ads</string>
    <string name="facebook_app_id">204658317922817</string>
    <string name="fb_login_protocol_scheme">fb204658317922817</string>
    <!-- <string name="fb_login_protocol_scheme">fb140912210840040</string>-->
    <string name="fbid">140912210840040</string>
    <string name="noOrders">You have not placed any order yet</string>
    <string name="nodeliverredOrders">You have not placed any order yet</string>
    <string name="title_activity_user_list">Chat List</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="favourite">"Choose your favourite "</string>
    <string name="pickiplocation">Choose your Meetup location</string>
    <string name="title_activity_chat">Chat</string>
    <string name="cht">Chat</string>
    <string name="title_activity_cuisinescategorie">Categorie</string>
    <string name="rate">Rate your order</string>
    <string name="posttl">Post Free Ads</string>
    <string name="acctporder">Are you sure want accept this  Free add?</string>
    <string name="nocompletdrdr">No completed order yet</string>
    <string name="orderempty">No orders found</string>
    <string name="location">Enable location</string>
    <string name="loctiontxt">You\'ll need to enable your location in order to use seesame</string>
    <string name="title_activity_rating">Rate</string>
    <string name="ratehint">"Your comments will help  overall community "</string>
    <string name="pricelbl">Set Price</string>
    <string name="expirytimelbl">Choose expiry time</string>
    <string name="deliveryprtnrlbl">Choose delivery partner</string>
    <string name="cuisines">Choose cuisines</string>
    <string name="title_activity_userrate_list">Ratings</string>
    <string name="noratings">"No Ratings found "</string>
    <string name="action_settings">setting</string>
    <string name="extndtime">Extend Expiretime</string>
    <string name="todayplan">What are you planning  today?</string>
    <string name="logoutermsg">Are you sure want to logout from account?</string>
    <string name="posturad">Post your Ad</string>
    <string name="title_categories">Categories</string>
    <string name="serach">Search</string>
    <string name="seesametxt">SeeSame</string>
   <!-- <string name="seesametxt">SeeSame - Realize the power of Community</string>-->
    <string name="textone">Oops!!We Don\'t find any near by Ads</string>
    <string name="texttwo">Why don\'t you start by place one.Its Free.</string>
    <string name="noOrdersinradius">No Orders found.</string>
    <string name="addamnt">Looking to add</string>
    <string name="nochats">No Chats found</string>
    <string name="msgcomplete">Show Completed Orders</string>
    <string name="prdctdesc">Product Description</string>
    <string name="prdcthint">Cake,Pastery,Home-Made,Powder</string>
    <string name="orderAccptmsg"> "Hurray !!! Order is accepted . Please feel free to chat here about the price and when you are planning to meet up to exchange goods etc." This chat will be saved and you can revisit later"</string>
    <string name="qntity">Set Quantity</string>
    <string name="allrdrs">All Orders</string>
    <string name="myordrs">My Orders</string>
    <string name="nointernet">No internet connection , Please try again later</string>
    <string name="refrs">Refresh</string>
    <string name="thanksMsg">Thanks for taking a look at my request , am looking to share</string>
    <string name="accptMsg"> If you are interested please Accept the order by clicking the below  accept button</string>




</resources>