<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.screens.LoginActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:progressBarStyleLarge"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:progress="50"
        android:progressDrawable="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_pager" />

    <LinearLayout
        android:id="@+id/layoutSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewFreeAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/free_account"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_10" />

        <TextView
            android:id="@+id/tvBecomeMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:fontFamily="@font/poppins_medium"
            android:onClick="tv_termscond"
            android:text="@string/become_member_text"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/text_12"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:fontFamily="@font/poppins"
            android:text="@string/and"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_10"
            android:textStyle="bold" />

        <TextView
            android:onClick="tv_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/policy"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/text_12"
            android:textStyle="bold" />

    </LinearLayout>





    <!-- <androidx.viewpager.widget.ViewPager
         android:background="@drawable/splsbg"
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/tabs"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingClass" />-->


    <LinearLayout
        android:id="@+id/layout_google"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/social_mediabtn"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tabs">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/googlelogo" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:paddingStart="10dp"
            android:text="@string/google"
            android:textColor="@color/white" />


    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:visibility="invisible"
        android:id="@+id/sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/layout_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <LinearLayout
        android:id="@+id/layout_facebook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/facebk_bg"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_google">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/fblogo" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:paddingStart="10dp"
            android:text="@string/facebk"
            android:textColor="@color/white" />


    </LinearLayout>

    <com.facebook.login.widget.LoginButton
        android:visibility="invisible"
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/layout_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_google" />

    <LinearLayout
        android:id="@+id/layout_twitter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/twiiter_bg"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_facebook"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/twitterlogo" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:paddingStart="10dp"
            android:text="@string/twitter"
            android:textColor="@color/white" />


    </LinearLayout>

    <View
        android:visibility="invisible"
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@drawable/divider_dotted"
        android:layerType="software"
        app:layout_constraintBottom_toTopOf="@id/layoutSignUp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_pager"
        app:tabBackground="@drawable/viewpager_tab_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp" />



    <com.screens.AutoScrollViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingClass" />


</androidx.constraintlayout.widget.ConstraintLayout>