<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/topbar_gradient"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="5dp"
            android:id="@+id/imgvw_logo"
            android:src="@drawable/logosmall"
            android:layout_width="35dp"
            android:layout_height="30dp"/>

        <TextView
            android:layout_alignLeft="@+id/imgvw_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center_vertical"
            android:lines="2"
            android:text="@string/seesametxt"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14" />

        <ImageView
            android:layout_marginEnd="@dimen/margin_5"
            android:layout_alignParentRight="true"
            android:id="@+id/img_chatIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_medium"
            android:src="@drawable/newchat" />


    </RelativeLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layout_nointernet"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/nointernetimg">

        </ImageView>

        <TextView
            android:id="@+id/tv_refersh"
            android:textColor="@color/colorWhite"
            android:layout_marginEnd="90dp"
            android:layout_marginStart="90dp"
            android:background="@drawable/btnsmall_bg"
            android:layout_marginTop="@dimen/top_margin"
            android:gravity="center"
            android:textSize="@dimen/text_16"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/refrs"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>




    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:progress="50"
        android:progressDrawable="@drawable/circle"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/layout_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/top_margin"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/nointernet"
                    android:textSize="@dimen/text_16" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="55dp"
                    android:background="@drawable/topbar_gradient"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/textone"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_14" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="55dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/topbar_gradient"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:lines="2"
                    android:text="@string/texttwo"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_14" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_cuisinesCategorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>


