<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contraints_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/logout_btnbg"
        android:fontFamily="@font/poppins_medium"
        android:onClick="Onclick_logout"
        android:text="@string/logout"
        android:textColor="@color/txt_color"
        android:textSize="@dimen/text_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/layoutSignUp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="@dimen/default_margin"
        android:layout_marginStart="-1dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layout_scrollmain"
        app:layout_constraintStart_toEndOf="@+id/layout_scrollmain" />


    <LinearLayout
        android:id="@+id/layout_nointernet"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/nointernetimg">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/nointernet"
            android:textSize="@dimen/text_16" />

        <TextView
            android:id="@+id/tv_refersh"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginEnd="90dp"
            android:background="@drawable/btnsmall_bg"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/refrs"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_16" />


    </LinearLayout>

    <ScrollView
        android:id="@+id/layout_scrollmain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradient"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/user_profilepic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/deafultprofilepic"
                    app:civ_border_color="@color/colorWhite"
                    app:civ_border_width="4dp"
                    app:civ_shadow="true"
                    app:civ_shadow_color="@color/color_text"
                    app:civ_shadow_radius="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="1">


                    <EditText

                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/poppins"
                        android:gravity="center"
                        android:text="@string/username"
                        android:textColor="@color/colorWhite"
                        android:textCursorDrawable="@color/white"
                        android:textSize="@dimen/text_16" />

                    <ImageView
                        android:id="@+id/img_uname"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.15"
                        android:gravity="center"
                        android:src="@drawable/checkwht" />


                </LinearLayout>

                <RatingBar

                    android:id="@+id/rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/white"
                    android:saveEnabled="true"
                    android:scaleX=".5"
                    android:scaleY=".5"
                    android:stepSize="0.5">

                </RatingBar>




            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/img_mobile"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="0.25"
                    android:background="@drawable/checkclr"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="0.75">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_mobileno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/mobileNo"
                        android:textSize="@dimen/text_14" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/top_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_emailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:editable="false"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/hintemail"
                    android:textSize="@dimen/text_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/name"
                    android:textSize="@dimen/fab_margin" />

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/fab_margin">

                <ListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:divider="@color/colorWhite" />



            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>